<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLE Service List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
    
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    
    <string name="Rssi">Rssi:</string>
    <string name="connect_state">Connect state:</string>
    <string name="ascii">ASCII</string>
    <string name="hex">HEX</string>
    <string name="decimal">DECIMAL</string>
    <string name="date">DATE</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="notify">Notify</string>
    
    
    
</resources>
